# sales_email_manager_agent

./: .env.example  .gitignore  README.md  email_log.csv  pyproject.toml  sales_email_manager_agent - Copy.py  sales_email_manager_agent.py
.github/workflows/: codeql-analysis.yml  tests.yml
